feat: add module connections with signal routing
- Add port definitions (Audio, Control, Gate) to each module type
- Create Connection and PortRef types for signal routing
- Add connection management to RackState with validation
- Implement connect mode UI in RackPane with port selection
- Add 'c' to connect, 'x' to disconnect keybindings
- Persist connections to SQLite
- Update README with new features and keybindings

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>