@@ -1,172 +1,127 @@
-# TUI DAW - Java Implementation
+# TUI DAW
 
-Terminal-based Digital Audio Workstation rewritten in Java 21.
+Terminal-based Digital Audio Workstation written in Rust.
+
+## Features
+
+- Modular synthesizer rack in the terminal
+- Module types: Oscillators, Filters, Envelopes, LFO, Effects, Output
+- Signal routing with connections between module ports
+- Parameter editing with visual sliders
+- SQLite-based persistence
 
 ## Prerequisites
 
-- Java 21 or later
-- Maven 3.8+
-- SuperCollider (for audio)
+- Rust 1.70 or later
+- Cargo
 
 ## Build
 
 ```bash
-# Install dependencies and build
-mvn clean package
-
-# Build without tests
-mvn clean package -DskipTests
+cargo build --release
 ```
 
 ## Run
 
 ```bash
-# Run with Maven
-mvn exec:java
-
-# Run the shaded JAR
-java --enable-preview -jar target/tui-daw-1.0-SNAPSHOT.jar
-
-# Run without audio (TUI only)
-java --enable-preview -jar target/tui-daw-1.0-SNAPSHOT.jar --no-audio
-
-# Connect to existing SuperCollider server
-java --enable-preview -jar target/tui-daw-1.0-SNAPSHOT.jar --connect
+cargo run
 ```
 
-## Configuration
+## Module Types
 
-Create `tuidaw.properties` in the working directory:
+| Category | Type | Ports |
+|----------|------|-------|
+| Oscillators | Saw, Sine, Square, Triangle | `out` (audio) |
+| Filters | Low-Pass, High-Pass, Band-Pass | `in` (audio), `out` (audio), `cutoff_mod` (control) |
+| Envelopes | ADSR | `gate` (gate), `out` (control) |
+| Modulation | LFO | `out` (control) |
+| Effects | Delay, Reverb | `in` (audio), `out` (audio) |
+| Output | Output | `in` (audio) |
 
-```properties
-# Path to scsynth executable
-scsynth.path=/Applications/SuperCollider.app/Contents/Resources/scsynth
+## Keybindings
 
-# SuperCollider port
-scsynth.port=57110
+### Rack View (Normal Mode)
 
-# Keybinding mode: vim, emacs, or normie
-keybinding.mode=vim
+| Key | Action |
+|-----|--------|
+| `j` / `k` / Arrow keys | Navigate modules |
+| `g` / `G` | Go to top / bottom |
+| `a` | Add module |
+| `d` | Delete selected module |
+| `e` | Edit module parameters |
+| `c` | Enter connect mode |
+| `x` | Disconnect (remove connection from selected module) |
+| `w` | Save rack |
+| `o` | Load rack |
+| `q` | Quit |
 
-# Path to SynthDef files
-synthdef.path=synthdefs
+### Connect Mode
 
-# Default save file
-save.path=rack.json
+| Key | Action |
+|-----|--------|
+| `j` / `k` | Navigate modules |
+| `Tab` / `h` / `l` | Cycle through ports on selected module |
+| `Enter` | Confirm port selection |
+| `Esc` | Cancel and return to normal mode |
+
+Connection workflow:
+1. Press `c` to enter connect mode
+2. Navigate to source module and select output port
+3. Press `Enter` to confirm source
+4. Navigate to destination module and select input port
+5. Press `Enter` to create connection
+
+### Edit Mode
+
+| Key | Action |
+|-----|--------|
+| `j` / `k` | Navigate parameters |
+| `h` / `l` | Decrease / increase value |
+| `Esc` | Save and return to rack |
+
+## Persistence
+
+Racks are saved to `~/.config/tuidaw/rack.tuidaw` (SQLite format).
+
+The save file includes:
+- All modules with their parameters
+- All connections between modules
+- Module ordering
+
+## Example Signal Chain
+
+```
+Saw Oscillator (saw-0)
+    out ────────────────> in
+                    Low-Pass Filter (lpf-1)
+                        out ────────> in
+                                  Output (out-2)
+
+LFO (lfo-3)
+    out ────────────────> cutoff_mod
+                    Low-Pass Filter (lpf-1)
 ```
 
-## SynthDef Files
+This creates a saw wave filtered by an LPF with LFO-modulated cutoff, routed to the output.
 
-Unlike the Clojure version which uses Overtone, this Java implementation requires
-precompiled SynthDef files. Create these in SuperCollider IDE and save them to the
-`synthdefs/` directory.
+## Testing
 
-Example SuperCollider code to create a SynthDef:
-
-```supercollider
-(
-SynthDef(\saw-osc, { |out_bus=0, freq=440, amp=0.5|
-    Out.ar(out_bus, Saw.ar(freq) * amp);
-}).writeDefFile("synthdefs/");
-)
+```bash
+cargo test
 ```
 
 ## Architecture
 
 ```
-Keyboard Input
-    ↓
-InputHandler (key→action translation)
-    ↓
-Dispatcher (routes by current view)
-    ↓
-StateTransitions (pure) + Rack (effectful)
-    ↓
-RackState (immutable record)
-    ↓
-Renderer (draws to Lanterna screen)
+src/
+├── main.rs          # Application entry, event loop
+├── panes/           # UI panes (Rack, Add, Edit)
+├── state/           # State management
+│   ├── module.rs    # Module types, ports, parameters
+│   ├── connection.rs # Connections between ports
+│   └── rack.rs      # RackState with persistence
+└── ui/              # UI framework
+    ├── pane.rs      # Pane trait, Action enum
+    ├── graphics.rs  # Drawing primitives
+    └── keymap.rs    # Keybinding system
 ```
-
-### Key Classes
-
-| Package | Class | Purpose |
-|---------|-------|---------|
-| `core` | `Dispatcher` | Routes actions by view |
-| `core` | `Action` | Enum of all actions |
-| `core` | `View` | Enum of views |
-| `state` | `RackState` | Main immutable state record |
-| `state` | `StateTransitions` | Pure state transformation functions |
-| `state` | `History` | Undo/redo stacks |
-| `modules` | `ModuleRegistry` | Module definitions with metadata |
-| `audio` | `AudioEngine` | scsynth lifecycle |
-| `audio` | `OSCClient` | JavaOSC wrapper |
-| `audio` | `Rack` | Effectful module operations |
-| `tui` | `TUIMain` | Main loop at 60fps |
-| `tui.input` | `VimBinding` | Vim-style keybindings |
-| `tui.input` | `EmacsBinding` | Emacs-style with chords |
-| `tui.input` | `NormieBinding` | Arrow key / Ctrl-key bindings |
-| `tui.render` | `Renderer` | View dispatch |
-| `persistence` | `RackSerializer` | JSON save/load |
-
-## Testing
-
-```bash
-# Run all tests
-mvn test
-
-# Run specific test class
-mvn test -Dtest=StateTransitionsTest
-```
-
-## Differences from Clojure Version
-
-1. **SynthDefs**: Must be precompiled (no runtime Overtone/defsynth)
-2. **Persistence**: Uses JSON instead of EDN
-3. **Build**: Maven instead of deps.edn
-4. **Records**: Java 17+ records instead of Clojure maps
-5. **Pattern matching**: Java 21 switch expressions
-
-## Views
-
-| View | Description |
-|------|-------------|
-| RACK | Module list (main view) |
-| EDIT | Parameter editing |
-| PATCH | Signal routing |
-| SEQUENCER | Step sequencer |
-| SEQ_TARGET | Target selection |
-| ADD | Module type selection |
-
-## Keybindings
-
-### Vim Mode (default)
-- `j/k` - Navigate
-- `h/l` - Adjust parameter
-- `e` - Edit module
-- `p` - Patch view
-- `s` - Sequencer
-- `a` - Add module
-- `d` - Delete module
-- `y` - Yank (copy)
-- `P` - Paste
-- `u` - Undo
-- `Ctrl-r` - Redo
-- `/` - Search
-- `:` - AI command
-- `q` - Quit
-
-### Emacs Mode
-- `C-n/C-p` - Navigate
-- `C-f/C-b` - Adjust parameter
-- `C-x C-s` - Save
-- `C-x C-c` - Quit
-- `C-c p` - Patch view
-- `C-c s` - Sequencer
-
-### Normie Mode
-- Arrow keys - Navigate
-- Enter - Edit
-- Delete - Delete module
-- Ctrl-C/Ctrl-V - Copy/paste
-- Ctrl-Z/Ctrl-Y - Undo/redo
-- Ctrl-S - Save
